# refactoring

Lab_1/: CMakeLists.txt.txt  Lab_1.docx  Lab_1.sln
Lab_1/Lab_1/: CMakeLists.txt  Lab_1.cpp  Lab_1.vcxproj  Lab_1.vcxproj.filters  LogCon.cpp  LogCon.h  test_logcon.cpp
Lab_1/Lab_1/x64/Debug/: CodeAnalysisResultManifest.txt  Lab_1.exe.recipe  Lab_1.ilk  Lab_1.nativecodeanalysis.sarif  Lab_1.vcxproj.FileListAbsolute.txt  LogCon.nativecodeanalysis.sarif  vc143.idb
Lab_1/Lab_1/x64/Debug/Lab_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab_2/: original.py  test_main.py
Lab_2/ref/: approximator.py  main.py  tabulated_data.py  test_main.py  utils.py
Lab_3/: main.py
Lab_3/models/: order.py  order_item.py  product.py  user.py
Lab_3/tests/: test_store.py
